[package]
name = "ckb-contract-bytes-without-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.3"
bytes = { version = "1.5.0", default-features = false }

[build-dependencies]
cc = "1.0"
